--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.8",
     "@react-native-async-storage/async-storage": "^1.19.5",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/node": "^20",
     "@types/react-datepicker": "^4.19.5",
     "@types/react-redux": "^7.1.25",
     "bootstrap": "5.2.2",
@@ -36,15 +37,14 @@
     "sass": "^1.63.4",
     "sharp": "^0.33.2",
     "swiper": "^9.4.1",
-    "yup": "^1.2.0",
     "typescript": "^5",
-    "@types/node": "^20"
+    "yup": "^1.2.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3"
   },
   "devDependencies": {
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-modal-video": "^1.2.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "@types/react-modal-video": "^1.2.3",
   }
 }
