--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
   "devDependencies": {
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-modal-video": "^1.2.3",
+    "@types/react-modal-video": "^1.2.3"
   }
 }
