--- a/package.json
+++ b/package.json
@@ -40,11 +40,9 @@
     "typescript": "^5",
     "yup": "^1.2.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
-  },
-  "devDependencies": {
+    "eslint-config-next": "14.0.3",
+    "@types/react-modal-video": "^1.2.3",
     "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-modal-video": "^1.2.3"
+    "@types/react-dom": "^18"
   }
 }
